# Mi-Fit-and-Zepp-workout-exporter

./: .gitignore  LICENSE  README.md  api.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  scraper.py
.github/workflows/: python.yml
core/: api.py  scraper.py
gpx_parse/: gpx_data_parse.py
src/: api.py  auth.py  constants.py  scraper.py
src/exporters/: base_exporter.py  geopandas_exporter.py  gpx_exporter.py
